[package]
edition = "2024"
name = "dbt-serde_yaml_derive"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["proc-macro"] }
quote = { version = "1.0", features = ["proc-macro"] }
syn = { version = "2.0", features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
