[package]
name = "dbt-serde-yaml-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dbt-serde-yaml = { path = ".." }

[[bin]]
name = "fuzz_from_slice"
path = "fuzz_targets/fuzz_from_slice.rs"
test = false
doc = false

[workspace]
